src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__color_set_definition_error2.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\definecolorset{rgb,HTML}{foo}\"#)"

---
ROOT@0..30
  PREAMBLE@0..30
    COLOR_SET_DEFINITION@0..30
      COLOR_SET_DEFINITION_NAME@0..15 "\\definecolorset"
      CURLY_GROUP_WORD_LIST@15..25
        L_CURLY@15..16 "{"
        WORD@16..19 "rgb"
        COMMA@19..20 ","
        WORD@20..24 "HTML"
        R_CURLY@24..25 "}"
      CURLY_GROUP_WORD@25..30
        L_CURLY@25..26 "{"
        WORD@26..29 "foo"
        R_CURLY@29..30 "}"
      MISSING@30..30 ""
      MISSING@30..30 ""

