src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__color_set_definition_error3.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\definecolorset{rgb,HTML}\"#)"

---
ROOT@0..25
  PREAMBLE@0..25
    COLOR_SET_DEFINITION@0..25
      COLOR_SET_DEFINITION_NAME@0..15 "\\definecolorset"
      CURLY_GROUP_WORD_LIST@15..25
        L_CURLY@15..16 "{"
        WORD@16..19 "rgb"
        COMMA@19..20 ","
        WORD@20..24 "HTML"
        R_CURLY@24..25 "}"
      MISSING@25..25 ""
      MISSING@25..25 ""
      MISSING@25..25 ""

