src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__command_definition_no_impl.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\newcommand{\\foo}\"#)"

---
ROOT@0..17
  PREAMBLE@0..17
    COMMAND_DEFINITION@0..17
      COMMAND_DEFINITION_NAME@0..11 "\\newcommand"
      CURLY_GROUP_COMMAND@11..17
        L_CURLY@11..12 "{"
        GENERIC_COMMAND_NAME@12..16 "\\foo"
        R_CURLY@16..17 "}"
      MISSING@17..17 ""

