src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__command_definition_simple.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\\newcommand[1]{\\id}{#1}\"#)"

---
ROOT@0..23
  PREAMBLE@0..23
    COMMAND_DEFINITION@0..19
      COMMAND_DEFINITION_NAME@0..11 "\\newcommand"
      MISSING@11..11 ""
      BRACK_GROUP_WORD@11..14
        L_BRACK@11..12 "["
        KEY@12..13
          WORD@12..13 "1"
        R_BRACK@13..14 "]"
      CURLY_GROUP@14..19
        L_CURLY@14..15 "{"
        GENERIC_COMMAND@15..18
          GENERIC_COMMAND_NAME@15..18 "\\id"
        R_CURLY@18..19 "}"
    CURLY_GROUP@19..23
      L_CURLY@19..20 "{"
      PARAMETER@20..22 "#1"
      R_CURLY@22..23 "}"

