src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__command_definition_with_begin.snap
---
source: src/syntax/latex/parser.rs
assertion_line: 1723
expression: "setup(r#\"\\newcommand{\\CVSubHeadingListStart}{\\begin{itemize}[leftmargin=0.5cm, label={}]}\"#)"
---
ROOT@0..80
  PREAMBLE@0..80
    COMMAND_DEFINITION@0..80
      COMMAND_DEFINITION_NAME@0..11 "\\newcommand"
      CURLY_GROUP_COMMAND@11..35
        L_CURLY@11..12 "{"
        GENERIC_COMMAND_NAME@12..34 "\\CVSubHeadingListStart"
        R_CURLY@34..35 "}"
      CURLY_GROUP@35..80
        L_CURLY@35..36 "{"
        BEGIN@36..79
          BEGIN_ENVIRONMENT_NAME@36..42 "\\begin"
          CURLY_GROUP_WORD@42..51
            L_CURLY@42..43 "{"
            KEY@43..50
              WORD@43..50 "itemize"
            R_CURLY@50..51 "}"
          BRACK_GROUP@51..79
            L_BRACK@51..52 "["
            TEXT@52..62
              WORD@52..62 "leftmargin"
            EQUALITY_SIGN@62..63 "="
            TEXT@63..75
              WORD@63..68 "0.5cm"
              COMMA@68..69 ","
              WHITESPACE@69..70 " "
              WORD@70..75 "label"
            EQUALITY_SIGN@75..76 "="
            CURLY_GROUP@76..78
              L_CURLY@76..77 "{"
              R_CURLY@77..78 "}"
            R_BRACK@78..79 "]"
        R_CURLY@79..80 "}"

