src/syntax/latex/snapshots/texlab__syntax__latex__parser__tests__empty.snap
---
source: src/syntax/latex/parser.rs
expression: "setup(r#\"\"#)"

---
ROOT@0..0
  PREAMBLE@0..0

